src/scss/05_objects/_quote.scss
.quote {
  @include font('special.quote');
  display: block;
  margin: $spacing-triple 0;
  padding: $spacing-half 0 $spacing-half $spacing-and-half;
  position: relative;

  @include breakpoint($breakpoint-l) {
    margin: $spacing-quadruple 0;
    padding: 0 0 0 $spacing-double + $spacing-half;
  }

  &::before {
    background-color: var(--hdbt-color-palette--primary);
    content: '';
    height: 100%;
    left: 0;
    position: absolute;
    top: 0;
    width: 8px;
  }
}

.quote__text {
  font-style: italic;
  margin-top: 0;

  &::before {
    content: '”'; // Defaults to finnish quotation syntax https://jkorpela.fi/suomi/lain.html
  }

  &[lang='en']::before,
  [lang='en'] &::before {
    content: '“'; // Uses english format when appropriate
  }

  &::after {
    content: '”';
  }
}

.quote__author {
  @include font('body');
  margin-top: $spacing-and-half;

  &::before {
    content: '-';
    margin-right: 3px;
  }

  cite {
    font-style: normal;
  }
}

